samples/_failures_safe/1761514883_1f03fd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3edc88af.c: In function ‘main’:
./samples/SAFE/__tmp_3edc88af.c:157:9: error: expected declaration or statement at end of input
  157 |         printf("Invalid node input\n");
      |         ^~~~~~
./samples/SAFE/__tmp_3edc88af.c:157:9: error: expected declaration or statement at end of input
